[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "FairRankTune_kcachel"
version = "0.0.2"
authors = [
  { name="Kathleen Cachel", email="kathleen.cachel@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


[project.urls]
homepage = "https://kcachel.github.io/"
repository = "https://github.com/KCachel/FairRankTune"
documentation = "https://github.com/KCachel/FairRankTune"